# raizes-nordeste-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: auth.py  cardapio.py  dependencies.py  estoque.py  exception_handlers.py  health.py  middleware.py  pedidos.py
app/api/schemas/: auth.py  cardapio.py  erro.py  estoque.py  pedido.py  usuario.py
app/application/: audit.py  estoque.py
app/application/use_cases/: atualizar_status_pedido.py  criar_pedido.py  movimentar_estoque.py  pagar_pedido.py
app/core/: config.py  security.py
app/domain/: enums.py  exceptions.py  service.py  transicoes.py
app/infrastructure/: database.py  payment.py
app/models/: __init__.py  audit_log.py  base.py  enum_column.py  item_pedido.py  movimentacao_pontos.py  pagamento.py  pedido.py  produto.py  produto_unidade.py  unidade.py  usuario.py
docs/postman/: raizes-nordeste.postman_collection.json
migrations/: env.py
migrations/versions/: 7ccf1216afdc_criacao_inicial_das_tabelas.py
scripts/: seed.py
tests/: conftest.py  test_config.py
tests/api/: test_health.py
tests/domain/: test_enums.py
tests/models/: test_base.py
