[project]
name = "raizes-nordeste"
version = "1.0.0"
description = "API para pedidos de comida do nordeste"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "email-validator>=2.0.0,<3.0.0",
    "alembic (>=1.18.3,<2.0.0)",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ruff>=0.9.0,<1.0.0",
    "pre-commit>=4.2",
]
